WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12565
ASSERTION failure on some declarative animations
https://bugs.webkit.org/show_bug.cgi?id=12565
Summary
ASSERTION failure on some declarative animations
Oliver Hunt
Reported
2007-02-04 02:03:19 PST
The above url fails on an assertion: ASSERTION FAILED: m_type == toSVGTransform.type() (/Users/oliver/WebKit/OpenSource/WebCore/ksvg2/svg/SVGTransformDistance.cpp:55 WebCore::SVGTransformDistance::SVGTransformDistance(const WebCore::SVGTransform&, const WebCore::SVGTransform&))
Attachments
Fix an off by one parsing error
(2.53 KB, patch)
2007-02-10 04:59 PST
,
mitz
aroben
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Maciej Stachowiak
Comment 1
2007-02-04 11:50:38 PST
<
rdar://problem/4975132
>
mitz
Comment 2
2007-02-09 07:37:25 PST
Got this assertion failure in svg/W3C-SVG-1.1/animate-elem-52-t.svg
mitz
Comment 3
2007-02-10 04:59:38 PST
Created
attachment 13103
[details]
Fix an off by one parsing error Includes change log and a manual test
Adam Roben (:aroben)
Comment 4
2007-02-10 14:12:44 PST
Comment on
attachment 13103
[details]
Fix an off by one parsing error r=me
David Kilzer (:ddkilzer)
Comment 5
2007-02-10 17:15:12 PST
Committed revision 19557.
David Kilzer (:ddkilzer)
Comment 6
2007-02-10 17:31:27 PST
***
Bug 12620
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug