WebCore:

Reviewed by Adam.

        - fix http://bugs.webkit.org/show_bug.cgi?id=12565
          ASSERTION failure on some declarative animations <rdar://problem/4975132>

        * ksvg2/svg/SVGAnimationElement.cpp:
        (WebCore::parseValues): Changed the string length math to avoid truncating
        the last character of each value.
        * manual-tests/svg-animation-parseValues.svg: Added.



Canonical link: https://commits.webkit.org/16443@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19557 268f45cc-cd09-0410-ab3c-d52691b4dbfc